Alignment issue fixed

--- a/styles/community.css
+++ b/styles/community.css
@@ -67,7 +67,7 @@
 #cont2 img{
     width: 100%;
     object-fit: cover;
-    margin: 20px 0;
+    margin: 0;
 }
 
 #cont3 ul{
